# project-plan-genie

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  langgraph copy.json  langgraph.json  main.py  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
docs/: Comprehensive Project Plan_ LangGraph-Based Projec.md  ai_agent_prompt.md  diagram.md  project-planning.md
examples/: results.md
frontend/: chat_local.py  genie_app.py  genie_streamlit_app.py  local_genie.py  local_ui_app.py  message_router.py  utils.py
generated_example/: sw_design.md
generated_examples/: AI-Note-Taking-App.md  ai_notion_note_taking_platform.md  project_blueprint_ai_note_taking_application.md  tailored_cover_letter_generator.md
notebooks/: astream_setup.ipynb  mcp_test.ipynb  mcp_test_2.ipynb  research_agent.ipynb  simple_agent.ipynb  simple_agent_improved.ipynb  single_step_eval.ipynb  supervisor.ipynb  websearch_agent.ipynb
old_generated_examples/: project_Agent_Powered_AI_Note_Taking_App.md
src/agent/: __init__.py  clarification_agent_subgraph.py  configuration.py  final_report_generation.py  graph.py  info_gethering_agent.py  mcp_tool_service.py  project_planning_agent.py  project_planning_genie.py  research_agent.py  researcher_agent.py  states.py  supervisor_agent.py  tool_agent.py  utils.py
src/agent/my_mcps/: __init__.py  mcp_config.json  mcp_tool_service.py
src/agent/prompts/: __init__.py  clarify_with_user_system_prompt.md  clarify_with_user_system_prompt_test.md  compress_research_system_prompt.md  lead_researcher_system_prompt.md  lead_researcher_system_prompt_test.md  project_idea.md  project_plan_structure_system_filesystem_prompts.md  project_plan_structure_system_prompts.md  research_system_prompt.md  summarize_webpage.md  system_prompt_project_plan_structure.md  tool_manager_system_prompt.md  transform_messages_into_research_topic_prompt.md
src/agent/providers/: __init__.py  base_class.py  model_provider_factory.py  open_ai_provider.py  perplexity_provider.py
tests/unit_tests/: test_clarification_agent_subgraph.py  test_configuration.py  test_final_report_generation.py  test_supervisor_agent_subgraph.py
