[project]
name = "project-planning-genie"
version = "0.1.0"
description = "Software development project planning, research and report generation tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.4",
    "langchain",
    "notebook>=7.4.4",
    "pre-commit>=4.2.0",
    "rootutils>=1.0.7",
    "tavily-python",
    "trustcall>=0.0.39",
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.3.7",
    "langchain-tavily",
    "langchain-groq>=0.2.4",
    "openai>=1.61.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.3",
    "pymupdf>=1.25.3",
    "xmltodict>=0.14.2",
    "linkup-sdk>=0.2.3",
    "duckduckgo-search>=3.0.0",
    "exa-py>=1.8.8",
    "requests>=2.32.3",
    "beautifulsoup4==4.13.3",
    "pytest",
    "httpx>=0.24.0",
    "markdownify>=0.11.6",
    "rich>=13.0.0",
    "langgraph-cli[inmem]>=0.3.1",
    "langsmith>=0.3.37",
    "langchain-google-vertexai>=2.0.25",
    "langchain-google-genai>=2.1.5",
    "ipykernel>=6.29.5",
    "langchain-perplexity>=0.1.1",
    "python-box>=7.3.2",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]

[tool.setuptools.package-dir]
# This maps package names to the directories where their source code is located.
# This is particularly useful for projects with a `src` layout.
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"

[tool.setuptools.package-data]
# This section specifies non-Python files that should be included in the package.

# The `py.typed` file is a marker file (defined in PEP 561) that tells type checkers
# that your package contains type annotations and should be checked.
# `"*"` means it applies to all packages defined.
"*" = ["py.typed"]


[dependency-groups]
dev = [
    "anyio",
    "codespell>=2.4.1",
    "langgraph-cli[inmem]",
    "mdformat>=0.7.22",
    "mypy",
    "pytest",
    "ruff",
]
